Fixed nav more menu overflow on mobile landscape view

--- a/src/styling/navigation.scss
+++ b/src/styling/navigation.scss
@@ -112,6 +112,7 @@ nav {
       right: 10px;
       max-width: 380px;
       height: 380px;
+      max-height: calc(100% - 20px);
     }
 
     .big-link-container {
